--- a/mockup2/estilo.css
+++ b/mockup2/estilo.css
@@ -4,7 +4,7 @@
 	box-sizing: content-box;
 
 }
-html{
+/*html{
     width: 1280px;
 }
 body{
@@ -35,26 +35,26 @@ nav h1{
 /*************Aside***************/
 aside{
     background-color: coral;
-    width: 140px;
+    width: 10.9375%;
     display:block;
     float:left;
-    padding: 10px;
+    padding: 0.78125%;
     min-height: 700px;
 }
 aside ol{
     list-style: none;
-    width: 140px;
+    width: 100%;
 }
 aside ol li#principal{
     margin:0;
     padding: 0;
-    width: 140px;
+    width: 100%;
     font-size:1.5em;
 }
 aside ol li{
-    margin: 0 5px 0 5px;
-    width:120px;
-    padding: 5px;
+    margin: 0 3.571428571428571% 0 3.571428571428571%;
+    width:85.71428571428571%;
+    padding: 3.571428571428571%;
 }
 aside ol li.resaltado:hover{
     background-color: brown;
@@ -63,44 +63,48 @@ aside ol li.resaltado:hover{
 /**********Div de la parte util***********/
 div#util{
     background-color:bisque;
-    width: 1120px;
+    width: 87.5%;
     display:block;
     float:left;
     min-height: 700px;
     padding-top: 20px;
 }
 div#util h1{
-    margin-left: 410px;
-    width:300px;
+    margin-left: 36.60714285714286%;
+    width:26.78571428571429%;
     font-size:2.5em;
 }
 div#util div{
     background-color: lightblue;
-    margin-left: 160px;
-    width: 760px;
-    padding: 20px;
+    margin-left: 14.28571428571429%;
+    width: 67.85714285714286%;
+    padding: 1.785714285714286%;
     min-height: 400px;
 }
+
+
+
 div#util div label{
     display:inline-block;
-    width: 100px;
-    margin-right: 15px;
+    width: 13.02083333333333%;
+    margin-right: 1.953125%;
 }
 div#util div textarea{
-    width: 248px;
+    border-width:2px;
+    width: 32.03125%;
     margin-top: 40px;
-    margin-right: 30px;
+    margin-right: 3.90625%;
 }
 div#util div input {
-    width: 246px;
+    width: 32.03125%;
     margin-top: 40px;
 }
 div#util div input.izq{
-    margin-right: 30px;
+    margin-right: 3.90625%;
 }
 div#util div input[type=button] {
-    width: 156px;
+    width: 20.3125%;
 }
 div#util div input[type=button].cancelar {
-    margin-right: 45px;
+    margin-right: 5.859375%;
 }
