--- a/mockup3/estilo.css
+++ b/mockup3/estilo.css
@@ -30,7 +30,7 @@ nav#nav1 img{
 nav#nav1 h1{
     display:block;
     float:right;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-right: 34.375%;
     width: 31.25%;
     font-size:4em;
@@ -137,6 +137,7 @@ div#util div input[type=button].cancelar {
         min-height: 70px;
     }
     nav#nav2 ol{
+        width: 100%;
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -153,16 +154,19 @@ div#util div input[type=button].cancelar {
     
     
 }
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 675px) {
     nav#nav1 h1{
-        margin-top: 10px;
-        font-size:1.5em;
+        margin-top: 5px;
+        margin-right: 20.375%;
+        width: 59.25%;
     }
     div#util{
         padding-top: 10px;
     }
-    div#util h1{
-        font-size:1em;
+    div#util h1{  
+        margin-left: 13.60714285714286%;
+        width:72.78571428571429%;
+        font-size:2em;
     }
     aside{
         display: none;
@@ -187,6 +191,7 @@ div#util div input[type=button].cancelar {
         float:left;
         margin: 0 1.571428571428571% 0 1.571428571428571%;
         padding: 2.571428571428571%;
+        width:25%;
     }
     nav#nav2 ol li.resaltado:hover{
         background-color: brown;
